feat: adicionado display com semáforo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ include_directories(${CMAKE_SOURCE_DIR}/lib)
 
 add_executable(${PROJECT_NAME}  
         blink.c 
+        lib/ssd1306.c
         )
 
 #target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR})
@@ -39,6 +40,7 @@ target_link_libraries(${PROJECT_NAME}
         FreeRTOS-Kernel         # Kernel do FreeRTOS
         FreeRTOS-Kernel-Heap4   # Gerenciador de memoria
         hardware_pwm
+        hardware_i2c
         )
 
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
