--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,13 @@ include_directories(${CMAKE_SOURCE_DIR}/lib)
 add_executable(${PROJECT_NAME}  
         blink.c 
         lib/ssd1306.c
+        lib/led_matriz.c
         )
 
 #target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR})
+
+# Creates pio_matriz header file
+pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/pio_matriz.pio)
 
 target_link_libraries(${PROJECT_NAME} 
         pico_stdlib 
@@ -41,6 +45,8 @@ target_link_libraries(${PROJECT_NAME}
         FreeRTOS-Kernel-Heap4   # Gerenciador de memoria
         hardware_pwm
         hardware_i2c
+        hardware_pio
+        hardware_clocks
         )
 
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
