--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_executable(${PROJECT_NAME}
         blink.c 
         lib/ssd1306.c
         lib/led_matriz.c
+        lib/sirene.c
         )
 
 #target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR})
